# a2a-agentic-project

./: .env.example  .gitignore  README.md
elon_agent/: pyproject.toml
elon_agent/elon/: __init__.py  agent.py  tools.py
jeff_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml  tools.py
mark_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml  tools.py
tests/: test_tool_contracts.py
